Add Maven profile `nativeTestBtwThrowMissingRegistrationErrors`